--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+}
+body{
+    padding: 0;
+    margin: 0;
+}
