--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1 class="title">QR Code Generator</h1>
+<h1 class="title" nz-popover nzPopoverTitle="Generate QR"
+    nzPopoverContent="Convert any text or link to QR Code and also download it for free!" nzPopoverPlacement="right">Text to QR</h1>
 
 <app-qrcomp></app-qrcomp>
