--- a/src/app/qrcomp/qrcomp.component.css
+++ b/src/app/qrcomp/qrcomp.component.css
@@ -20,10 +20,40 @@
     height: fit-content;
 }
 .qrClass{
-    border-radius: 4px;
+    border: 1px solid black;
 }
 
 .colorDiv{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+}
+.qrcolorDiv{
+    display: flex;
     flex-direction: row;
+    gap: 1vw;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+.txt{
+    margin: 0;
+}
+.picker{
+    border: 1px solid black;
+}
+
+
+
+    
+@media screen and (max-width: 768px) {
+    .btn{
+        font-size: 16px;
+    }
+    .linkTxt{
+        width: 80vw;
+        font-size: 14px;
+    }
 }
