--- a/src/app/qrcomp/qrcomp.component.html
+++ b/src/app/qrcomp/qrcomp.component.html
@@ -1,8 +1,28 @@
 <div class="mainDiv">
-    <input class="linkTxt" nz-input placeholder="Enter the link to generate QR Code" [(ngModel)]="link" type="url" [nzStatus]="inputStatus" (keyup.enter)="genQR()"/>
+    <input class="linkTxt" nz-input placeholder="Enter the text to generate QR Code" [(ngModel)]="link" type="url"
+        [nzStatus]="inputStatus" (keyup.enter)="genQR()" (click)="paste()"/>
     <button class="btn" nz-button nzType="primary" (click)="genQR()" [nzLoading]="isLoadingButton">Generate QR</button>
-    
-    <nz-qrcode id="download" class="qrClass" [nzValue]="linkToQR" [nzStatus]="qrLoading" [nzBgColor]="qrbg" [nzColor]="qrcolor"></nz-qrcode>
-   
-    <nz-color-picker nzShowText></nz-color-picker>
+
+    <div id="download">
+        <nz-qrcode class="qrClass" [nzValue]="linkToQR" [nzStatus]="qrLoading" [nzBgColor]="qrbg" (nzRefresh)="genQR()"
+            [nzColor]="qrcolor"></nz-qrcode>
+        <a #download></a>
+    </div>
+
+    <div class="colorDiv">
+        <div class="qrcolorDiv">
+            <p class="txt">Change color of QR Code: </p>
+            <nz-color-picker class="picker" nzShowText [(ngModel)]="qrcolor"></nz-color-picker>
+        </div>
+        <div class="qrcolorDiv">
+            <p class="txt">Change background color: </p>
+            <nz-color-picker class="picker" nzShowText [(ngModel)]="qrbg"></nz-color-picker>
+        </div>
+    </div>
+
+    <button nz-button nzType="primary" [nzSize]="size" nzShape="round" (click)="downloadQR()" [disabled]="disbtn2Value">
+        <span nz-icon nzType="download"></span>
+        Download QR Code
+    </button>
+
 </div>
